--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 "autoplay": "auto",
                 "showSwfDownload": true,
                 "upgradeToHttps": window.location.protocol === "https:",
-                "scale": "noborder",
+                "scale": "showAll",
                 "quality": "low",
                 "openUrlMode": "confirm",
                 "allowNetworking": "all",
